chng website title

--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en-us"><head>
   <meta charset="utf-8">
-  <title>somrat | Hugo Portfolio Template</title>
+  <title>International Geographical Union Commission on Population Geography</title>
 
   
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -47,7 +47,7 @@
   
 
   
-  <meta property="og:title" content="somrat | Hugo Portfolio Template" />
+  <meta property="og:title" content="International Geographical Union Commission on Population Geography" />
 <meta property="og:description" content=" " />
 <meta property="og:type" content="website" />
 <meta property="og:url" content="https://igu-population-geography.github.io/igu-population-geography/" />
@@ -70,7 +70,7 @@
 <style></style>
 <section class="header "  id="home">
   <div class="logo">
-    <img class="img-fluid" src="/igu-population-geography/images/logo1.png" alt="somrat | Hugo Portfolio Template">
+    <img class="img-fluid" src="/igu-population-geography/images/logo1.png" alt="International Geographical Union Commission on Population Geography">
   </div>
   <div class="slider-prev-button slider-button">
     <i class="fa fa-angle-left"></i>
@@ -231,7 +231,7 @@
           </div>
         </a>
         <div class="mobile-menu-logo"><a href="/igu-population-geography"><img class="img-fluid"
-              src="https://igu-population-geography.github.io/igu-population-geography/images/logo1.png" alt="somrat | Hugo Portfolio Template"></a>
+              src="https://igu-population-geography.github.io/igu-population-geography/images/logo1.png" alt="International Geographical Union Commission on Population Geography"></a>
         </div>
         <div class="menu-slider">
           <nav>
