--- a/public/en/index.html
+++ b/public/en/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="en-us">
   <head>
-    <title>https://examplesite.com</title>
-    <link rel="canonical" href="https://examplesite.com">
+    <title>https://igu-population-geography.github.io/igu-population-geography/</title>
+    <link rel="canonical" href="https://igu-population-geography.github.io/igu-population-geography/">
     <meta name="robots" content="noindex">
     <meta charset="utf-8">
-    <meta http-equiv="refresh" content="0; url=https://examplesite.com">
+    <meta http-equiv="refresh" content="0; url=https://igu-population-geography.github.io/igu-population-geography/">
   </head>
 </html>
